[package]
name = "a-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
incremental = false

[profile.release]
incremental = false
